同步于: 9月21日23时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -30,24 +30,24 @@
 #### [ 中共常委神秘会议曝光 “能上能下”敲打谁？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655556.md)
 #### [ 传大陆媒体人怒发声：坚决反对全民核酸及清零](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829049.md)
 #### [ 【名家专栏】中共政权正在实施家庭监狱化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828326.md)
+#### [ 【内幕】刘亚洲代表核心太子党与习近平决裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/993813.md)
 #### [ 你绝对想不到 中国年轻人最新“流行” 竟然是这个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655286.md)
 #### [ 习内部讲话传出 自居“保党卫士”习亲信或暗藏地雷](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103532363.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 普京亲信见郭声琨套近乎 分析：中俄关系脆弱](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828459.md)
 #### [ 20大人事巨变？中办文件藏天机！](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655605.md)
+#### [ 习近平连任定局已成？分析：其实仍有悬念](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655707.md)
 #### [ 二十大前中共忙消音 叶剑英养女：红二代已分裂](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103533329.md)
 #### [ 施工不见进展 中国人抵制房贷运动悄然扩大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828435.md)
-#### [ 习近平连任定局已成？分析：其实仍有悬念](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655707.md)
 #### [ “消失”三个多月 李佳琦重新现身直播间](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829168.md)
 #### [ 【热门话题】网传大陆资深媒体人反对清零/李克强去留有变？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103532545.md)
 #### [ 【横河观点】拜登对台两重磅表述 毛宁回应被删](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828519.md)
-#### [ 【内幕】刘亚洲代表核心太子党与习近平决裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/993813.md)
 #### [ 县官要王健林利润全留下 专家：这就是中共土匪嘴脸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655418.md)
+#### [ 对孙力军感恩戴德 龚道安被判无期(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017201.md)
 #### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
+#### [ 二十大召开前 红二代：不少人反对习近平连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017214.md)
 #### [ 北电两大性丑闻持续发酵 孙俪妹妹为好友发声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829243.md)
 #### [ 巩固习近平的政治地位？政法系统颁“十禁”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999284.md)
 #### [ 分析：习近平给官员“上发条” 二十大前清洗官场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103532492.md)
 #### [ 北电爆丑闻 知名艺考机构校长被指诱奸学生](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828836.md)
 #### [ 习近平闭关锁国的意向有多大？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1017082.md)
-#### [ 传大庆100多志愿者食物中毒送医被阻 门卫：没通行证就死小区(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017149.md)
-#### [ 【新闻看点】中共推升官新规 六常委去留生变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829166.md)
