--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -23,8 +23,8 @@
 #### [ 【新闻看点】中共推升官新规 六常委去留生变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829166.md)
 #### [ “消失”三个多月 李佳琦重新现身直播间](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829168.md)
 #### [ 王岐山参加英女王葬礼 中使馆“热烈欢迎”挨批](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829385.md)
-#### [ 习近平连任有悬念 二十大前可能突发两大事件(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017225.md)
 #### [ 陷烂尾非议 二十大前官方为何再提雄安新区](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13829586.md)
+#### [ 习近平连任有悬念 二十大前可能突发两大事件(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017225.md)
 #### [ 北电两大性丑闻持续发酵 孙俪妹妹为好友发声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829243.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 创历届之最 330名代表和委员缺席中共两会(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999673.md)
@@ -50,4 +50,4 @@
 #### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
 #### [ 【财商天下】中国“最不易”的一代 80后惹谁了？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829078.md)
 #### [ 贵阳27人头七未过 再传封控居民饿疯 大白猎女“上床换送饭”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017221.md)
-#### [ 【一线采访】武汉外经贸学院爆学生维权抗议 ](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828888.md)
+#### [ 【中国观察】习接班人选的变数和危机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829685.md)
